# EpollChat

./: CMakeLists.txt
src/classes/general/: ClientAction.cpp  ClientAction.h  Enums.h  ServerAction.cpp  ServerAction.h
src/classes/server/: ChatRoomHost.cpp  ChatRoomHost.h  ClientInfo.cpp  ClientInfo.h  Server.cpp  Server.h
